- Added : Integration of the Easiest Multilanguage originally created by GIJOE (malanciault)
- Added : Configuration options to turn on or off and configure the Multilanguage on the site (malanciault)
- Added : Integrating some flags image to be used by the multilanguage feature (malanicault)
- Added : Handling 404 and 500 pages automatically on the site (malanciault)

- Changed : The new default theme is now css100_morpho (malanciault)
- Changed : The icons of /class/xoopseditor/dhtmlext/images/*.* (sato-san)

- Removed : The 'Default' theme has been removed (malanciault)

- Improved: When the User registration is Off... all links to register.php are not shown.

- Fixed: system templates corrected for validation, added title attributes to links and filled alt attributes for images (skenow|kris_fr)

Working Changes : (Changes to be reverted or made definitive)

- Commented a line in common.php ... someone can tell for what is this line? (young-pee)
- Security Audit: making sure that header & redirect_header are followed with exit(); (protection from telnet vulnerability aswell as other instances where the page is viewed with a system that does not understand the 'header' function, it would skip the redirection page and continue displaying the rest of page. (Vaughan)
- Security Audit: making sure that sql query values are all encapsulated in single quotes, helps prevent SQLi. Added intval to values in sql queries that should only be an integer value. (Vaughan)

========================
Unreleased: XOOPS 2.0.18
========================

- improved : html and css installer (dugris)
- fixed #1824377 : _MA_USER_SENDMAIL not defined (Garrath/dugris)
- fixed #1540480 : $modversion constant language truncated (zoullou/dugris)
- Fixed #1779344 : City renamed (young-pee)
- Fixed #1333337 : Grp memberships lost when usr w. no Group perm edits usr act (jegelstaff/dugris)
- Fixed #1821846 : mistake on RpcDateTimeHandle (Garrath/dugris)