@@ -4,6 +4,7 @@
     <{$block.lang_password}><br />
     <input type="password" name="pass" size="12" maxlength="32" /><br />
     <!-- <input type="checkbox" name="rememberme" value="On" class ="formButton" /><{$block.lang_rememberme}><br /> //-->
+    <input type="checkbox" name="rememberme" value="On" />remember me<br /><{* rewrite it according to your language *}><{* autologin hack GIJ *}>
     <input type="hidden" name="xoops_redirect" value="<{$xoops_requesturi}>" />
     <input type="hidden" name="op" value="login" />
     <input type="submit" value="<{$block.lang_login}>" /><br />
